--- a/lyrics-exercise/css/lyrics-exercise-styles.css
+++ b/lyrics-exercise/css/lyrics-exercise-styles.css
@@ -1,13 +1,14 @@
 h1{
 	text-align: center;
 	font-size:60px;
-	font-family: "jaf-domus-titling-extrabold-web";
+	font-weight:800;
+	font-family: "jaf-domus-titling-web";
 }
 
 h2{
 	text-align: center;
 	font-weight: bold; 
-	font-family: "jaf-domus-titling-extrabold-web";
+	font-family: "jaf-domus-titling-web";
 }
 p{
 	text-align: center;
@@ -22,29 +23,33 @@ body {
 
 p.extra{
 	font-size:18px;
-	color: #26C6DA  ;
-	font-family: "jaf-domus-titling-extrabold-web";
+	color: #26C6DA ;
+	font-weight:800;
+	font-family: "jaf-domus-titling-web";
 }
 
 p.fun{
 	font-size:30px;
+	font-weight:800;
 	color: #FF5722  ;
-	font-family: "jaf-domus-titling-extrabold-web";
+	font-family: "jaf-domus-titling-web";
 
 }
 p.kanye{
 	font-size:17px;
-	color: #FFB300  ;
-	font-family: "jaf-domus-titling-extrabold-web";
+	color: #FFB300;
+	font-weight:800;
+	font-family: "jaf-domus-titling-web";
 
 }
 p.poop{
 	font-size:23px;
-	color: #FF9800  ;
-	font-family: "jaf-domus-titling-extrabold-web";
+	color: #FF9800;
+	font-weight:800;
+	font-family: "jaf-domus-titling-web";
 }
 .leftbox{ 
-  background-color: #80DEEA  ;
+  background-color: #80DEEA;
   position: absolute;
   height: 275%;
   width: 15%;
