--- a/lyrics-exercise/css/lyrics-exercise-styles.css
+++ b/lyrics-exercise/css/lyrics-exercise-styles.css
@@ -1,7 +1,6 @@
 h1{
 	text-align: center;
 	font-size:60px;
-	font-weight:800;
 	font-family: "jaf-domus-titling-web";
 }
 
@@ -24,8 +23,7 @@ body {
 p.extra{
 	font-size:18px;
 	color: #26C6DA ;
-	font-weight:800;
-	font-family: "jaf-domus-titling-web";
+	font-family: "jaf-domus-titling-web-n8";
 }
 
 p.fun{
