--- a/lyrics-exercise-type/css/lyrics-exercise-type-styles.css
+++ b/lyrics-exercise-type/css/lyrics-exercise-type-styles.css
@@ -4,6 +4,7 @@ h1{
 	font-family: "jaf-domus-titling-web",sans-serif;
 	font-style: normal;
 	font-weight: 800;
+	letter-spacing: .55em;
 }
 
 h2{
@@ -28,6 +29,7 @@ p.extra{
 	font-family: "jaf-domus-titling-web",sans-serif;
 	font-style: normal;
 	font-weight: 800;
+	text-decoration: underline;
 }
 
 p.fun{
