--- a/recipe/css/styles.css
+++ b/recipe/css/styles.css
@@ -88,3 +88,10 @@ p{
 	margin-right: 0;
 	margin-bottom: 5%;
 }
+ img{
+ 	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    width: 70%;
+}
