--- a/recipe/css/styles.css
+++ b/recipe/css/styles.css
@@ -1,5 +1,8 @@
 body {
 	background-color: #fffae9; 
+	padding-bottom: 3.2em;
+	margin-left: 35px;
+	margin-right: 33px;
 }
 
 .header{
@@ -25,20 +28,64 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 2px solid #d12129;
-    margin: 1em .8em;
+    border-top: 1.2px solid #d12129;
+    margin: 2.3em -1em;
     padding: 0;
 }
 
 p{
-	margin-left: 15px;
-	margin-right: 15px;
+	text-indent: -17px;
 	font-size:16px;
 	font-family: 'Loca', serif;	color: #d12129;
-	padding-left: 5px;
+	color:black;
+	line-height: 20px;
+	text-indent: 5em hanging;
+}
+
+footer {
+	padding-top: 2em;
+	font-size: 13px;
+	font-family: 'Loca', serif;	color: #d12129;
+	color:black;
+	line-height: 20px;
+
+}
+
+p.extraInfo {
+	text-align:left; 
+	text-indent: 0px;
+	font-size: 16px;
+	font-family: 'Loca', serif;	color: #d12129;
 	color:black;
 	line-height: 20px;
 }
+
+.headingDetail {
+	text-align: left;
+	font-size:14px;
+	font-family: 'Loca', serif;	color: #d12129;
+	color: #d12129;
+	margin-bottom: -15px;
+	margin-top: 20px;
+}
+
+.headingDetailInfo{
+	text-indent: -17px;
+	margin-left: 7px;
+	font-size: 16px;
+	font-family: 'Loca', serif;	color: #d12129;
+	color:black;
+}
+
+.headingDetailInfotwo{
+	margin-left: 7px;
+	text-indent: -17px;
+	font-size:16px;
+	font-family: 'Loca', serif;	color: #d12129;
+	color:black;
+	line-height: 20px;
+}
+
 
 .heading{
 	text-align: left;
@@ -60,12 +107,11 @@ p{
 .times{
 	float: left;
 	width: 46%;
-	padding: 10px;
 }
 
 .times p.heading {
 	text-align: left;
-	font-size:12px;
+	font-size:14px;
 	font-family: 'Loca', serif;	color: #d12129;
 	color: #d12129;
 	margin-bottom: -15px;
@@ -74,24 +120,21 @@ p{
 
 .times p{
 	text-align: left;
-	font-size:14px;
+	font-size:16px;
 	font-family: 'Loca', serif;	color: #d12129;
 	color:black;
 }
 
 .times img{
 	margin-top: 8px;
-	float: right;
+	float: left;
 	height: 60%;
-	width: 62%;
-	margin-left: 3%;
-	margin-right: 0;
+	width: 60%;
+	margin-right: 10%;
 	margin-bottom: 5%;
 }
  img{
  	display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    width: 70%;
+    margin-top: 30px;
+    width: 100%;
 }
